@@ -57,6 +57,7 @@ use strict;
 use Error qw(:try);
 use Template::Latex;
 use LedgerSMB::Template::TTI18N;
+use Log::Log4perl;
 
 #my $binmode = ':utf8';
 my $binmode = ':raw';
